Corrige print.css pour marges et adaptation à tous les navigateurs

--- a/public/css/print.css
+++ b/public/css/print.css
@@ -1,45 +1,39 @@
 @page {
   size: landscape;
-  /* width:29.7cm;
-  height:21cm; */
-}
-
-@media print{
-  .container {
-      max-width: 100%;
-      color:#000;
-  }
-}
-
-.container,.row{
-  margin: 0 0.5% 0 0.1%;
-  padding:0;
 }
 
 .not-printable{
   display: none;
 }
 
-.calendar {
-  min-height:100%;
-  max-height:100%;
-  min-width:100%;
-  overflow: hidden;
-}
-
-.calendar-week{
-  page-break-after: always;
-  /*height:19.5cm;*/
-  min-height:19.5cm;
-  /* width:29.7cm; */
-  /* margin:0;
-  padding:0; */
-}
-
 .calendar *{
   font-size:7pt;
+  color:#000;
 }
 
 .calendar h4{
   font-size:3em;
+}
+
+.container,.row {
+  margin:0;
+  padding:0;
+}
+
+.calendar {
+  margin:5mm 7mm;
+  width:283mm;
+  height:200mm;
+}
+
+.calendar-week{
+  page-break-after: always;
+  min-height:180mm;
+  height:180mm;
+  margin:0;
+  padding:0;
+}
+
+.calendar h4{
+  height:15mm;
 }
