--- a/public/css/print.css
+++ b/public/css/print.css
@@ -4,7 +4,7 @@
 
 html{
   height:100%;
-  position:static;
+  /* position:static; */
 }
 
 .not-printable{
@@ -16,10 +16,17 @@ html{
   color:#000;
 }
 
+.taches-employe:not(.active){
+  font-size:6pt;
+}
+
+
 .calendar h4{
   font-size:3em;
-  /* max-height:20mm;
-  overflow:hidden; */
+}
+
+.calendar-day > h5{
+  font-size:1.2em;
 }
 
 .container,.row {
@@ -27,7 +34,7 @@ html{
   padding:0;
   min-width:100%;
   width:100%;
-  position:static;
+  /* position:static; */
 }
 
 .calendar .row:first-of-type{
@@ -37,20 +44,34 @@ html{
 
 
 .calendar .row:nth-child(2){
-  max-height:170mm;
+  max-height:190mm;
   overflow:hidden;
 }
 
 .calendar{
   position: static;
   width:297mm;
-  height:210mm;
+  height:200mm;
   page-break-after: always;
 }
 
 .calendar-week{
-  min-height:170mm;
-  height:170mm;
+  /* min-height:190mm; */
+  height:190mm;
+  width:287mm;
   margin:0;
   padding:0;
+}
+
+.taches-employe .row{
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.tache{
+  padding:0 1em 0 0.1em
+}
+
+.taches-employe {
+  margin:0 0 0.1em 
 }
